src/tests/boolean_expression/snapshots/monkey_interpreter__tests__boolean_expression__test_boolean_expression_case_1_lexical_analysis.snap
---
source: src/tests/boolean_expression/mod.rs
assertion_line: 16
expression: tokens
---
[
    PositionedToken {
        token: False,
        position: Position {
            line: 1,
            column: 1,
        },
    },
]
