src/tests/boolean_expression/snapshots/monkey_interpreter__tests__boolean_expression__test_boolean_expression_case_3_syntax_analysis.snap
---
source: src/tests/boolean_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Boolean {
            boolean: True,
        },
    },
]
